--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
     <!DOCTYPE html>
-    <html lang  =  "en-US">iutf
+    <html lang  =  "en-US">
         <head>
-            <meta charset = "utf-8">
-            <meta name = "viewport" content="width=device-,initial-scale=1.0">
+            <meta charset = "utf-8 />
+            <meta name "viewport" content="width=device-width, initial-scale=1.0">
             <title> Happiness Ncube | WDD 130</title>
-            <meta name = "description" content = " My name is Happiness Nonkululeko Ncube, WDD130, This page is for my course home page.">
+            <meta name = "description" content ="My name is Happiness Nonkululeko Ncube, WDD130, This page is for my course home page.">
             <meta name = "author"  content = "Happiness Nonkululeko Ncube">
             <link rel= "stylesheet" href="styles/styles.css">
         </head>
@@ -17,7 +17,7 @@
             </header>
             <main>
                 <h1> Happiness Ncube | WDD 130</h1>
-                <img src="images/profile.jpg" alt="hello,my name is Happiness Ncube" width="200">
+                <img src="images/profile.jpg" alt="hello,my name is Happiness Ncube" width="200px">
                 <p> Hello my name is Happiness Ncube and im from South Africa, Durban. 
                     I enjoy singing and being around my family and friends
                     I love web development because it enables me to use my creative imagination. </p>
