--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <p>South Africa is a country that is located in the southen part of Africa. IT is borthere by Mozambique, Zimbabwe, Botswana, and Namibia</p>
             </aside>
             <footer>
-                <P>©2025 🎹 Happiness Ncube 🎹 South Afrioca, Durban</P>
+                <P>©2025 🎹 Happiness Ncube 🎹 South Africa, Durban</P>
             </footer>
         </body>
 
