--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <header>
                 <nav>
                     <a href="#">home</a>
-                    <a href="wwr/">RaftingWebsite</a>
+                    <a href="wwr/">Raftingwebsite</a>
                 </nav>
             </header>
             <main>
@@ -25,11 +25,10 @@
             <aside> 
                 <h2>South Africa</h2>
                 <img src = "images/south africa.jpg" alt = "South Africa">
-                <p>South Africa is a country that is located in the southen part of Africa. IT is borthere by Mozambique, Zimbabwe, Botswana, and Namibia</p>
+                <p>South Africa is a country that is located in the southen part of Africa. It is borthered by Mozambique, Zimbabwe, Botswana, and Namibia</p>
             </aside>
             <footer>
-                <P>©2025 🎹 Happiness Ncube 🎹 South Africa, Durban</P>
+                <p>©2025 🎹 Happiness Ncube 🎹 South Africa, Durban</p>
             </footer>
         </body>
-
     </html>
