--- a/index.html
+++ b/index.html
@@ -1,34 +1,32 @@
-    <!DOCTYPE html>
-    <html lang="en-US">
-        <head>
-            <meta charset = "utf-8 />
-            <meta name "viewport" content="width=device-width, initial-scale=1.0">
-            <title> Happiness Ncube | WDD 130</title>
-            <meta name = "description" content ="My name is Happiness Nonkululeko Ncube, WDD130, This page is for my course home page.">
-            <meta name = "author"  content = "Happiness Nonkululeko Ncube">
-            <link rel= "stylesheet" href="styles/styles.css">
-        </head>
-        <body> 
-            <header>
-                <nav>
-                    <a href="#">home</a>
-                    <a href="wwr/">Raftingwebsite</a>
-                </nav>
-            </header>
-            <main>
-                <h1> Happiness Ncube | WDD 130</h1>
-                <img src="images/profile.jpg" alt="hello,my name is Happiness Ncube" width="200px">
-                <p> Hello my name is Happiness Ncube and im from South Africa, Durban. 
-                    I enjoy singing and being around my family and friends
-                    I love web development because it enables me to use my creative imagination. </p>
-            </main>
-            <aside> 
-                <h2>South Africa</h2>
-                <img src = "images/south africa.jpg" alt = "South Africa">
-                <p>South Africa is a country that is located in the southen part of Africa. It is borthered by Mozambique, Zimbabwe, Botswana, and Namibia</p>
-            </aside>
-            <footer>
-                <p>©2025 🎹 Happiness Ncube 🎹 South Africa, Durban</p>
-            </footer>
-        </body>
-    </html>
+<!DOCTYPE html>
+<html lang="en-US">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Happiness Ncube | WDD 130</title>
+  <meta name="description" content="My name is Happiness Nonkululeko Ncube, WDD130, This page is for my course home page.">
+  <meta name="author" content="Happiness Nonkululeko Ncube">
+  <link rel="stylesheet" href="styles/styles.css">
+</head>
+<body>
+  <header>
+    <nav>
+      <a href="#">Home</a>
+      <a href="wwr/">Rafting Website</a>
+    </nav>
+  </header>
+  <main>
+    <h1>Happiness Ncube | WDD 130</h1>
+    <img src="images/profile.jpg" alt="Hello, my name is Happiness Ncube" width="200px">
+    <p>Hello, my name is Happiness Ncube, and I'm from South Africa, Durban. I enjoy singing and being around my family and friends. I love web development because it enables me to use my creative imagination.</p>
+  </main>
+  <aside>
+    <h2>South Africa</h2>
+    <img src="images/south africa.jpg" alt="South Africa">
+    <p>South Africa is a country located in the southern part of Africa. It is bordered by Mozambique, Zimbabwe, Botswana, and Namibia.</p>
+  </aside>
+  <footer>
+    <p>&copy; 2025 &nbsp; Happiness Ncube &nbsp; South Africa, Durban</p>
+  </footer>
+</body>
+</html>
