--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <p>South Africa is a country located in the southern part of Africa. It is bordered by Mozambique, Zimbabwe, Botswana, and Namibia.</p>
   </aside>
   <footer>
-    <p>&copy; 2025 &nbsp; Happiness Ncube &nbsp; South Africa, Durban</p>
+    <p>&copy; 2025 🌝; Happiness Ncube 🌚; South Africa, Durban</p>
   </footer>
 </body>
 </html>
