--- a/wwr/about.html
+++ b/wwr/about.html
@@ -1,1 +1,30 @@
-
+<!DOCTYPE html>
+<html lang=”en”>
+<head>
+    <meta charset=”UTF-8”>
+    <meta name=”viewport” content=”width=device-width, initial-scale=1.0”>
+    <title>About Us</title>
+    <link rel=”stylesheet” href=”styles/styles.css”>
+    <link rel=”preconnect” href=https://fonts.googleapis.com>
+    <link rel=”preconnect” href=https://fonts.gstatic.com crossorigin>
+    <link href=https://fonts.googleapis.com/css2?family=Playfair+Display&family=Playwrite+Viet+Nam&display=swap rel=”stylesheet”>
+</head>
+<body>
+    <header>
+        <img src=”images/logo.jpg” alt=”Company Logo”>
+        <nav>
+            <ul>
+                <li><a href=”#”>Home</a></li>
+                <li><a href=”#”>About Us</a></li>
+                <li><a href=”#”>Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <!—Your main content here 
+    </main>
+    <footer>
+        <!—Your footer content here 
+    </footer>
+</body>
+</html>
