--- a/wwr/about.html
+++ b/wwr/about.html
@@ -1,5 +1,5 @@
-<!DOCTYPE HTl>
-<html lang="en">
+<!DOCTYPE html>
+html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -59,6 +59,3 @@
     </footer>
 </body>
 </html>
-
-
-    
