--- a/wwr/about.html
+++ b/wwr/about.html
@@ -16,9 +16,10 @@
         <img src="images/logo.png" alt="Company Logo">
         <nav>
             <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About Us</a></li>
-                <li><a href="#">Contact</a></li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About Us</a></li>
+        <li><a href="contact.html">Contact</a></li>
+        <li><a href="trips.html">Trips</a></li>
             </ul>
         </nav>
     </header>
