--- a/wwr/about.html
+++ b/wwr/about.html
@@ -13,36 +13,38 @@
 </head>
 <body>
     <header>
-        <img src="images/logo.png" alt="Company Logo">
         <nav>
             <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About Us</a></li>
-        <li><a href="contact.html">Contact</a></li>
-        <li><a href="trips.html">Trips</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About Us</a></li>
+                <li><a href="contact.html">Contact</a></li>
+                <li><a href="trips.html">Trips</a></li>
             </ul>
         </nav>
+        <img src="images/logo.png" alt="Company Logo" class="logo">
     </header>
     <main>
         <div class="hero">
-            <img src="images/image1.png" alt=" ">
-            <h1>White Water Rafting</h1>
+            <img src="images/image1.png" alt=" " class="hero-image">
+            <div class="hero-overlay">
+                <h1>White Water Rafting</h1>
+            </div>
+            <img src="images/image2.jpg" alt=" " class="hero-image-2">
+            <div class="welcome-text">
+                <p>Welcome to White Watter Rafting, you premier destination for thrilling advrntures on the water. Experience the rush of navigating throughrapids and the serenity of floatingthrough calm waters. Join us for an unforgetable journey.</p>
+            </div>
         </div>
-        <article>
-            <img src="images/image2.jpg" alt=" ">
-            <p>Welcome to White Watter Rafting, you premier destination for thrilling advrntures on the water. Experience the rush of navigating throughrapids and the serenity of floatingthrough calm waters. Join us for an unforgetable journey.</p>
-        </article>
         <section>
             <h2>History</h2>
             <p>White Water Rafting fas a rich history that dates back to the early days of river exploration. our company was founded by the group of passionate rafters who saut tho share the trill of white water rafting with others. since our humble begginings we've grown into premier rafting outfitter.</p>
         </section>
         <section class="gallery">
             <h2>Adventure Awaits You!</h2>
-            <img src="images/image3.jpg" alt=" ">
-            <img src="images/image4.jpg" alt=" ">
-            <img src="images/image5.jpg" alt=" ">
-            <img src="images/image6.png" alt=" ">
-            <img src="images/image7.jpg" alt=" ">
+            <img src="images/image3.jpg" alt=" " class="gallery-image">
+            <img src="images/image4.jpg" alt=" " class="gallery-image">
+            <img src="images/image5.jpg" alt=" " class="gallery-image">
+            <img src="images/image6.png" alt=" " class="gallery-image">
+            <img src="images/image7.jpg" alt=" " class="gallery-image">
         </section>
     </main>
     <footer>
@@ -57,6 +59,7 @@
                 <img src="images/instagram.svg" alt="instagram">
             </a>
         </nav>
+        <p>&copy; 2023 White Water Rafting</p>
     </footer>
 </body>
 </html>
