--- a/wwr/about.html
+++ b/wwr/about.html
@@ -1,65 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Us</title>
-    <meta name="description" content="White Water Rafting company about page">
-    <meta name="author" content="Your Name">
-    <link rel="stylesheet" href="styles/rafting.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Playwrite+Viet+Nam&display=swap" rel="stylesheet">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>About Us</title>
+  <meta name="description" content="White Water Rafting company about page">
+  <meta name="author" content="Your Name">
+  <link rel="stylesheet" href="styles/rafting.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Playwrite+Viet+Nam&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header>
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About Us</a></li>
-                <li><a href="contact.html">Contact</a></li>
-                <li><a href="trips.html">Trips</a></li>
-            </ul>
-        </nav>
-        <img src="images/logo.png" alt="Company Logo" class="logo">
-    </header>
-    <main>
-        <div class="hero">
-            <img src="images/image1.png" alt=" " class="hero-image">
-            <div class="hero-overlay">
-                <h1>White Water Rafting</h1>
-            </div>
-            <img src="images/image2.jpg" alt=" " class="hero-image-2">
-            <div class="welcome-text">
-                <p>Welcome to White Watter Rafting, you premier destination for thrilling advrntures on the water. Experience the rush of navigating throughrapids and the serenity of floatingthrough calm waters. Join us for an unforgetable journey.</p>
-            </div>
-        </div>
-        <section>
-            <h2>History</h2>
-            <p>White Water Rafting fas a rich history that dates back to the early days of river exploration. our company was founded by the group of passionate rafters who saut tho share the trill of white water rafting with others. since our humble begginings we've grown into premier rafting outfitter.</p>
-        </section>
-        <section class="gallery">
-            <h2>Adventure Awaits You!</h2>
-            <img src="images/image3.jpg" alt=" " class="gallery-image">
-            <img src="images/image4.jpg" alt=" " class="gallery-image">
-            <img src="images/image5.jpg" alt=" " class="gallery-image">
-            <img src="images/image6.png" alt=" " class="gallery-image">
-            <img src="images/image7.jpg" alt=" " class="gallery-image">
-        </section>
-    </main>
-    <footer>
-        <nav class="social-links">
-            <a href="https://facebook.com">
-                <img src="images/facebook.svg" alt="facebook">
-            </a>
-            <a href="https://twitter.com">
-                <img src="images/twitter.svg" alt="twitter">
-            </a>
-            <a href="https://instagram.com">
-                <img src="images/instagram.svg" alt="instagram">
-            </a>
-        </nav>
-        <p>&copy; 2023 White Water Rafting</p>
-    </footer>
+  <header>
+    <nav>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About Us</a></li>
+        <li><a href="contact.html">Contact</a></li>
+        <li><a href="trips.html">Trips</a></li>
+      </ul>
+    </nav>
+    <img src="images/logo.png" alt="Company Logo" class="logo">
+  </header>
+  <main>
+    <div class="hero">
+      <img src="images/image1.png" alt=" " class="hero-image">
+      <div class="hero-overlay">
+        <h1>White Water Rafting</h1>
+      </div>
+      <article>
+        <img src="images/image2.jpg" alt=" " class="hero-image-2">
+        <p>Welcome to White Watter Rafting, you premier destination for thrilling advrntures on the water.</p>
+      </article>
+    </div>
+    <section>
+      <h2>History</h2>
+      <p>White Water Rafting fas a rich history that dates back to the early days of river exploration. our company was founded by the group of passionate rafters who saut tho share the trill of white water rafting with others. since our humble begginings we've grown into premier rafting outfitter.</p>
+    </section>
+    <section class="gallery">
+      <h2>Adventure Awaits You!</h2>
+      <img src="images/image3.jpg" alt=" " class="gallery-image">
+      <img src="images/image4.jpg" alt=" " class="gallery-image">
+      <img src="images/image5.jpg" alt=" " class="gallery-image">
+      <img src="images/image6.png" alt=" " class="gallery-image">
+      <img src="images/image7.jpg" alt=" " class="gallery-image">
+    </section>
+  </main>
+  <footer>
+    <nav class="social-links">
+      <a href="https://facebook.com">
+        <img src="images/facebook.svg" alt="facebook">
+      </a>
+      <a href="https://twitter.com">
+        <img src="images/twitter.svg" alt="twitter">
+      </a>
+      <a href="https://instagram.com">
+        <img src="images/instagram.svg" alt="instagram">
+      </a>
+    </nav>
+    <p>&copy; 2023 White Water Rafting - Your Name</p>
+  </footer>
 </body>
 </html>
