--- a/wwr/about.html
+++ b/wwr/about.html
@@ -6,7 +6,7 @@
   <title>About Us</title>
   <meta name="description" content="White Water Rafting company about page">
   <meta name="author" content="Your Name">
-  <link rel="stylesheet" href="styles/rafting.css">
+  <link rel="stylesheet" href="styles/styles.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Playwrite+Viet+Nam&display=swap" rel="stylesheet">
