--- a/wwr/about.html
+++ b/wwr/about.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>About Us</title>
   <meta name="description" content="White Water Rafting company about page">
-  <meta name="author" content="Your Name">
+  <meta name="author" content="Happiness Ncube">
   <link rel="stylesheet" href="styles/styles.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -36,7 +36,7 @@
     </div>
     <section>
       <h2>History</h2>
-      <p>White Water Rafting fas a rich history that dates back to the early days of river exploration. our company was founded by the group of passionate rafters who saut tho share the trill of white water rafting with others. since our humble begginings we've grown into premier rafting outfitter.</p>
+      <p>White Water Rafting has a rich history that dates back to the early days of river exploration. our company was founded by the group of passionate rafters who saut tho share the trill of white water rafting with others. since our humble begginings we've grown into premier rafting outfitter.</p>
     </section>
     <section class="gallery">
       <h2>Adventure Awaits You!</h2>
@@ -59,7 +59,7 @@
         <img src="images/instagram.svg" alt="instagram">
       </a>
     </nav>
-    <p>&copy; 2023 White Water Rafting - Your Name</p>
+    <p>&copy; 2023 White Water Rafting - Happiness Ncube</p>
   </footer>
 </body>
 </html>
