--- a/wwr/about.html
+++ b/wwr/about.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>About Us</title>
   <meta name="description" content="White Water Rafting company about page">
-  <meta name="author" content="Happiness Ncube">
+  <meta name="author" content="Nonkululeko Ncube">
   <link rel="stylesheet" href="styles/styles.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -31,12 +31,15 @@
       </div>
       <article>
         <img src="images/image2.jpg" alt=" " class="hero-image-2">
-        <p>Welcome to White Watter Rafting, you premier destination for thrilling advrntures on the water.</p>
+        <p>Welcome to White Watter Rafting, your premier destination for thrilling adventures on the water.</p>
       </article>
+      <div class="welcome-text">
+        <p>Experience the rush of navigating through rapids and the serenity of floating through calm waters. Join us for an unforgettable journey.</p>
+      </div>
     </div>
     <section>
       <h2>History</h2>
-      <p>White Water Rafting has a rich history that dates back to the early days of river exploration. our company was founded by the group of passionate rafters who saut tho share the trill of white water rafting with others. since our humble begginings we've grown into premier rafting outfitter.</p>
+      <p>White Water Rafting has a rich history that dates back to the early days of river exploration. Our company was founded by a group of passionate rafters who sought to share the thrill of white water rafting with others. Since our humble beginnings, we've grown into a premier rafting outfitter.</p>
     </section>
     <section class="gallery">
       <h2>Adventure Awaits You!</h2>
@@ -59,7 +62,7 @@
         <img src="images/instagram.svg" alt="instagram">
       </a>
     </nav>
-    <p>&copy; 2023 White Water Rafting - Happiness Ncube</p>
+    <p>&copy; 2023 White Water Rafting - Nonkululeko Ncube</p>
   </footer>
 </body>
 </html>
