--- a/wwr/about.html
+++ b/wwr/about.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>About Us</title>
   <meta name="description" content="White Water Rafting company about page">
-  <meta name="author" content="Nonkululeko Ncube">
+  <meta name="author" content="Happiness Ncube">
   <link rel="stylesheet" href="styles/styles.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -14,6 +14,7 @@
 <body>
   <header>
     <nav>
+      <img src="images/logo.png" alt="Company Logo" class="logo">
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About Us</a></li>
@@ -21,7 +22,6 @@
         <li><a href="trips.html">Trips</a></li>
       </ul>
     </nav>
-    <img src="images/logo.png" alt="Company Logo" class="logo">
   </header>
   <main>
     <div class="hero">
@@ -29,12 +29,9 @@
       <div class="hero-overlay">
         <h1>White Water Rafting</h1>
       </div>
-      <article>
-        <img src="images/image2.jpg" alt=" " class="hero-image-2">
-        <p>Welcome to White Watter Rafting, your premier destination for thrilling adventures on the water.</p>
-      </article>
+      <img src="images/image2.jpg" alt=" " class="hero-image-2">
       <div class="welcome-text">
-        <p>Experience the rush of navigating through rapids and the serenity of floating through calm waters. Join us for an unforgettable journey.</p>
+        <p>Welcome to White Watter Rafting, you premier destination for thrilling adventures on the water.</p>
       </div>
     </div>
     <section>
@@ -62,7 +59,7 @@
         <img src="images/instagram.svg" alt="instagram">
       </a>
     </nav>
-    <p>&copy; 2023 White Water Rafting - Nonkululeko Ncube</p>
+    <p>&copy; 2023 White Water Rafting - Happiness Ncube</p>
   </footer>
 </body>
 </html>
