--- a/wwr/about.html
+++ b/wwr/about.html
@@ -27,11 +27,11 @@
     <div class="hero">
       <img src="images/image1.png" alt=" " class="hero-image">
       <div class="hero-overlay">
-        <h1>White Water Rafting</h1>
-      </div>
-      <img src="images/image2.jpg" alt=" " class="hero-image-2">
-      <div class="welcome-text">
-        <p>Welcome to White Watter Rafting, you premier destination for thrilling adventures on the water.</p>
+        <h1 style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%);">White Water Rafting</h1>
+        <article style="position: absolute; bottom: 0; left: 0; width: 100%; padding: 20px; background-color: rgba(255, 255, 255, 0.5);">
+          <img src="images/image2.jpg" alt=" " class="hero-image-2" style="float: right;">
+          <p>Welcome to White Watter Rafting, you premier destination for thrilling adventures on the water.</p>
+        </article>
       </div>
     </div>
     <section>
@@ -49,13 +49,13 @@
   </main>
   <footer>
     <nav class="social-links">
-      <a href="https://facebook.com">
+      <a href="https://facebook.com" style="text-decoration: none;">
         <img src="images/facebook.svg" alt="facebook">
       </a>
-      <a href="https://twitter.com">
+      <a href="https://twitter.com" style="text-decoration: none;">
         <img src="images/twitter.svg" alt="twitter">
       </a>
-      <a href="https://instagram.com">
+      <a href="https://instagram.com" style="text-decoration: none;">
         <img src="images/instagram.svg" alt="instagram">
       </a>
     </nav>
