--- a/wwr/about.html
+++ b/wwr/about.html
@@ -5,8 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>About Us</title>
   <meta name="description" content="White Water Rafting company about page">
-  <meta name="author" content="Happiness Ncube">
-  <link rel="stylesheet" href="styles/styles.css">
+  <meta name="author" content="Zion Ncube">
+  <link rel="stylesheet" href="styles/rafting.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Playwrite+Viet+Nam&display=swap" rel="stylesheet">
@@ -27,9 +27,9 @@
     <div class="hero">
       <img src="images/image1.png" alt=" " class="hero-image">
       <div class="hero-overlay">
-        <h1 style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%);">White Water Rafting</h1>
-        <article style="position: absolute; bottom: 0; left: 0; width: 100%; padding: 20px; background-color: rgba(255, 255, 255, 0.5);">
-          <img src="images/image2.jpg" alt=" " class="hero-image-2" style="float: right;">
+        <h1>White Water Rafting</h1>
+        <article>
+          <img src="images/image2.jpg" alt=" " class="hero-image-2" style="float: right; width: 300px; height: 200px; object-fit: cover;">
           <p>Welcome to White Watter Rafting, you premier destination for thrilling adventures on the water.</p>
         </article>
       </div>
@@ -40,26 +40,26 @@
     </section>
     <section class="gallery">
       <h2>Adventure Awaits You!</h2>
-      <img src="images/image3.jpg" alt=" " class="gallery-image">
-      <img src="images/image4.jpg" alt=" " class="gallery-image">
-      <img src="images/image5.jpg" alt=" " class="gallery-image">
-      <img src="images/image6.png" alt=" " class="gallery-image">
-      <img src="images/image7.jpg" alt=" " class="gallery-image">
+      <img src="images/image3.jpg" alt=" " class="gallery-image" style="width: 250px; height: 200px; object-fit: cover;">
+      <img src="images/image4.jpg" alt=" " class="gallery-image" style="width: 250px; height: 200px; object-fit: cover;">
+      <img src="images/image5.jpg" alt=" " class="gallery-image" style="width: 250px; height: 200px; object-fit: cover;">
+      <img src="images/image6.png" alt=" " class="gallery-image" style="width: 250px; height: 200px; object-fit: cover;">
+      <img src="images/image7.jpg" alt=" " class="gallery-image" style="width: 250px; height: 200px; object-fit: cover;">
     </section>
   </main>
   <footer>
     <nav class="social-links">
       <a href="https://facebook.com" style="text-decoration: none;">
-        <img src="images/facebook.svg" alt="facebook">
+        <img src="images/facebook.svg" alt="facebook" style="width: 20px; height: 20px;">
       </a>
       <a href="https://twitter.com" style="text-decoration: none;">
-        <img src="images/twitter.svg" alt="twitter">
+        <img src="images/twitter.svg" alt="twitter" style="width: 20px; height: 20px;">
       </a>
       <a href="https://instagram.com" style="text-decoration: none;">
-        <img src="images/instagram.svg" alt="instagram">
+        <img src="images/instagram.svg" alt="instagram" style="width: 20px; height: 20px;">
       </a>
     </nav>
-    <p>&copy; 2023 White Water Rafting - Happiness Ncube</p>
+    <p>&copy; 2023 White Water Rafting - Zion Ncube</p>
   </footer>
 </body>
 </html>
