--- a/wwr/about.html
+++ b/wwr/about.html
@@ -6,10 +6,10 @@
   <title>About Us</title>
   <meta name="description" content="White Water Rafting company about page">
   <meta name="author" content="Zion Ncube">
-  <link rel="stylesheet" href="styles/styles.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Playwrite+Viet+Nam&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
   <header>
@@ -28,10 +28,7 @@
       <img src="images/image1.png" alt=" " class="hero-image">
       <div class="hero-overlay">
         <h1>White Water Rafting</h1>
-        <article>
-          <img src="images/image2.jpg" alt=" " class="hero-image-2" style="float: right; width: 300px; height: 200px; object-fit: cover;">
-          <p>Welcome to White Watter Rafting, you premier destination for thrilling adventures on the water.</p>
-        </article>
+        <p>Welcome to White Watter Rafting, you premier destination for thrilling adventures on the water.</p>
       </div>
     </div>
     <section>
@@ -40,23 +37,25 @@
     </section>
     <section class="gallery">
       <h2>Adventure Awaits You!</h2>
-      <img src="images/image3.jpg" alt=" " class="gallery-image" style="width: 250px; height: 200px; object-fit: cover;">
-      <img src="images/image4.jpg" alt=" " class="gallery-image" style="width: 250px; height: 200px; object-fit: cover;">
-      <img src="images/image5.jpg" alt=" " class="gallery-image" style="width: 250px; height: 200px; object-fit: cover;">
-      <img src="images/image6.png" alt=" " class="gallery-image" style="width: 250px; height: 200px; object-fit: cover;">
-      <img src="images/image7.jpg" alt=" " class="gallery-image" style="width: 250px; height: 200px; object-fit: cover;">
+      <div class="gallery-container">
+        <img src="images/image3.jpg" alt=" " class="gallery-image">
+        <img src="images/image4.jpg" alt=" " class="gallery-image">
+        <img src="images/image5.jpg" alt=" " class="gallery-image">
+        <img src="images/image6.png" alt=" " class="gallery-image">
+        <img src="images/image7.jpg" alt=" " class="gallery-image">
+      </div>
     </section>
   </main>
   <footer>
     <nav class="social-links">
-      <a href="https://facebook.com" style="text-decoration: none;">
-        <img src="images/facebook.svg" alt="facebook" style="width: 20px; height: 20px;">
+      <a href="https://facebook.com">
+        <img src="images/facebook.svg" alt="facebook">
       </a>
-      <a href="https://twitter.com" style="text-decoration: none;">
-        <img src="images/twitter.svg" alt="twitter" style="width: 20px; height: 20px;">
+      <a href="https://twitter.com">
+        <img src="images/twitter.svg" alt="twitter">
       </a>
-      <a href="https://instagram.com" style="text-decoration: none;">
-        <img src="images/instagram.svg" alt="instagram" style="width: 20px; height: 20px;">
+      <a href="https://instagram.com">
+        <img src="images/instagram.svg" alt="instagram">
       </a>
     </nav>
     <p>&copy; 2023 White Water Rafting - Zion Ncube</p>
