--- a/wwr/about.html
+++ b/wwr/about.html
@@ -1,64 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>About Us</title>
-  <meta name="description" content="White Water Rafting company about page">
-  <meta name="author" content="Zion Ncube">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Playwrite+Viet+Nam&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="styles/styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>About Us</title>
+    <meta name=" description" content="White water rafting company about page">
+    <meta name="author" content="Happiness Ncube">
+    <link rel="preconnect" href=https://fonts.googleapis.com>
+    <link rel="preconnect" href=https://fonts.gstatic.com crossorigin>
+    <link href=https://fonts.googleapis.com/css2?family=Playfair+Display&family=Playwrite+Viet+Nam&display=swap rel="stylesheet">
+    <link rel="stylesheet" herf="styles/rafting.css">
 </head>
 <body>
-  <header>
-    <nav>
-      <img src="images/logo.png" alt="Company Logo" class="logo">
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About Us</a></li>
-        <li><a href="contact.html">Contact</a></li>
-        <li><a href="trips.html">Trips</a></li>
-      </ul>
-    </nav>
-  </header>
-  <main>
-    <div class="hero">
-      <img src="images/image1.png" alt=" " class="hero-image">
-      <div class="hero-overlay">
-        <h1>White Water Rafting</h1>
-        <p>Welcome to White Watter Rafting, you premier destination for thrilling adventures on the water.</p>
-      </div>
-    </div>
-    <section>
-      <h2>History</h2>
-      <p>White Water Rafting has a rich history that dates back to the early days of river exploration. Our company was founded by a group of passionate rafters who sought to share the thrill of white water rafting with others. Since our humble beginnings, we've grown into a premier rafting outfitter.</p>
-    </section>
-    <section class="gallery">
-      <h2>Adventure Awaits You!</h2>
-      <div class="gallery-container">
-        <img src="images/image3.jpg" alt=" " class="gallery-image">
-        <img src="images/image4.jpg" alt=" " class="gallery-image">
-        <img src="images/image5.jpg" alt=" " class="gallery-image">
-        <img src="images/image6.png" alt=" " class="gallery-image">
-        <img src="images/image7.jpg" alt=" " class="gallery-image">
-      </div>
-    </section>
-  </main>
-  <footer>
-    <nav class="social-links">
-      <a href="https://facebook.com">
-        <img src="images/facebook.svg" alt="facebook">
-      </a>
-      <a href="https://twitter.com">
-        <img src="images/twitter.svg" alt="twitter">
-      </a>
-      <a href="https://instagram.com">
-        <img src="images/instagram.svg" alt="instagram">
-      </a>
-    </nav>
-    <p>&copy; 2023 White Water Rafting - Zion Ncube</p>
-  </footer>
+    <header>
+        <div class>
+            <img src="images/logo.png" alt="Company Logo">    
+            <nav>
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">About Us</a></li>
+                    <li><a href="#">trips </a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+        <main>
+            <div>
+                <section class="hero"></section>
+                    <img src="images/image1.png" alt="hero image">
+                    <h1>White Water Rafting</h1>
+                    <article>
+                        <img src="images/image2.jpg"  alt="happy client">
+                        <p>Welcome to White Watter Rafting, you premier destination for thrilling advrntures on the water. Experience the rush of navigating throughrapids and the serenity of floatingthrough calm waters. Join us for an unforgetable journey.</p>
+                    </article>
+                </section>
+            </div>
+            <section>
+                <h2>history</h2>
+                <p>White Water Rafting fas a rich history that dates back to the early days of river exploration. our company was founded by the group of passionate rafters who saut tho share the trill of white water rafting with others. since our humble begginings we've grown into premier rafting outfitter.</p>
+            </section>
+            <section>
+                <h2>Adventure Awaits You!</h2>
+                <img src="images/image3.jpg" alt="gallary immage">
+                <img src="images/image4.jpg" alt="gallary image">
+                <img src="images/image5.jpg" alt="gallary image">
+                <img src="images/image6.png" alt="gallary image">
+                <img src="images/image7.jpg" alt="gallary image">
+            </section>
+        </main>
+    <footer>
+        <p>&copy; 2025 White Water Raftig - Happiness Ncube</p>
+        <nav class=" social links">
+            <a href=" hptts://facebook.com">
+                <img src="images/facebook.svg" alt= "facebook">
+            </a>
+            <a href=" hptts://twitter.com">
+                <img src="images/twitter.svg" alt= "twitter">
+            </a>
+            <a href=" hptts://instagram.com">
+                <img src="images/instagram.svg" alt= "instagram">
+            </a>
+        </nav>
+    </footer>
 </body>
 </html>
