--- a/wwr/about.html
+++ b/wwr/about.html
@@ -53,13 +53,13 @@
         <p>&copy; 2025 White Water Raftig - Happiness Ncube</p>
         <nav class=" social links">
             <a href=" hptts://facebook.com">
-                <img src="images/facebook.svg" alt= "facebook">
+                <img src="images/facebook.png" alt= "facebook">
             </a>
             <a href=" hptts://twitter.com">
-                <img src="images/twitter.svg" alt= "twitter">
+                <img src="images/twitter.png" alt= "twitter">
             </a>
             <a href=" hptts://instagram.com">
-                <img src="images/instagram.svg" alt= "instagram">
+                <img src="images/instagram.png" alt= "instagram">
             </a>
         </nav>
     </footer>
