--- a/wwr/about.html
+++ b/wwr/about.html
@@ -55,7 +55,7 @@
       <ul>
         <li><a href="https://facebook.com"><img src="images/facebook.png" alt="Facebook"></a></li>
         <li><a href="https://twitter.com"><img src="images/twitter.png" alt="Twitter"></a></li>
-        <li><a href="https://whatsapp.com"><img src="images/Whatsapp.png" alt="whatsapp"></a></li>
+        <li><a href="https://whatsapp.com"><img src="images/whatsapp.png" alt="whatsapp"></a></li>
       </ul>
     </nav>
   </footer>
