--- a/wwr/about.html
+++ b/wwr/about.html
@@ -34,11 +34,11 @@
       <img src="images/image2.jpg" alt="Happy Client">
       <p>Welcome to White Water Rafting, your premier destination for thrilling adventures on the water. Experience the rush of navigating through rapids and the serenity of floating through calm waters. Join us for an unforgettable journey.</p>
     </article>
-    <section>
+    <section class="history">
       <h2>History</h2>
       <p>White Water Rafting has a rich history that dates back to the early days of river exploration. Our company was founded by a group of passionate rafters who sought to share the thrill of white water rafting with others. Since our humble beginnings, we've grown into a premier rafting outfitter.</p>
     </section>
-    <section>
+    <section class="adventure">
       <h2>Adventure Awaits You!</h2>
       <ul class="gallery">
         <li><img src="images/image3.jpg" alt="Gallery Image"></li>
@@ -55,9 +55,8 @@
       <ul>
         <li><a href="https://facebook.com"><img src="images/facebook.png" alt="Facebook"></a></li>
         <li><a href="https://twitter.com"><img src="images/twitter.png" alt="Twitter"></a></li>
-        <li><a href="https://whatsapp.com"><img src="images/whatsapp.png" alt="whatsapp"></a></li>
+        <li><a href="https://whatsapp.com"><img src="images/whatsapp.png" alt="WhatsApp"></a></li>
       </ul>
     </nav>
   </footer>
-</body>
-</html>
+</body></html
