--- a/wwr/about.html
+++ b/wwr/about.html
@@ -3,47 +3,52 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Us</title>
-    <link rel="stylesheet" href="styles/styles.css">
+    <title>About Us | White Water Rafting</title>
+    <meta name=" description" content="White water rafting company about us page">
+    <meta name="author" content="Happiness Ncube">
     <link rel="preconnect" href=https://fonts.googleapis.com>
     <link rel="preconnect" href=https://fonts.gstatic.com crossorigin>
     <link href=https://fonts.googleapis.com/css2?family=Playfair+Display&family=Playwrite+Viet+Nam&display=swap rel="stylesheet">
+    <link rel="stylesheet" herf="styles/rafting.css">
 </head>
 <body>
     <header>
-        <img src="images/logo.png" alt="Company Logo">
-        <nav>
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About Us</a></li>
-                <li><a href="#">Contact</a></li>
-            </ul>
-        </nav>
+        0<div class>
+            <img src="images/logo.png" alt="Company Logo">    
+            <nav>
+                <ul>
+                    <a href="index.html">Home</a>
+                    <a href="about.html">About Us</a>
+                    <a href="trips.html">trips </a>
+                    <a href="contacts.html">Contact</a>
+                </ul>
+            </nav>
+        </div>
     </header>
         <main>
-            <div>
-                <img src="images/image1.png" alt="   ">
-                <h1>White Water Rafting</h1>
+            <div class="hero">
+                <h1>About Us</h1>
                 <article>
-                    <img src="images/image2.jpg"  alt="  ">
+                    <img src="images/image2.jpg"  alt="happy client">
                     <p>Welcome to White Watter Rafting, you premier destination for thrilling advrntures on the water. Experience the rush of navigating throughrapids and the serenity of floatingthrough calm waters. Join us for an unforgetable journey.</p>
                 </article>
             </div>
-            <section>
+            <section clas= "history">
                 <h2>history</h2>
                 <p>White Water Rafting fas a rich history that dates back to the early days of river exploration. our company was founded by the group of passionate rafters who saut tho share the trill of white water rafting with others. since our humble begginings we've grown into premier rafting outfitter.</p>
             </section>
-            <section>
+            <section class="adventures">
                 <h2>Adventure Awaits You!</h2>
-                <img src="images/image3.jpg" alt="    ">
-                <img src="images/image4.jpg" alt="    ">
-                <img src="images/image5.jpg" alt="    ">
-                <img src="images/image6.png" alt="    ">
-                <img src="images/image7.jpg" alt="    ">
+                <img src="images/image3.jpg" alt="gallary image">
+                <img src="images/image4.jpg" alt="adventure">
+                <img src="images/image5.jpg" alt="happy clients">
+                <img src="images/image6.png" alt="adventure on water">
+                <img src="images/image7.jpg" alt="forest view">
             </section>
         </main>
     <footer>
-        <nav class=" social links">
+        <p>&copy; 2025 | White Water Raftig | Happiness Ncube</p>
+        <div class=" social links">
             <a href=" hptts://facebook.com">
                 <img src="images/facebook.svg" alt= "facebook">
             </a>
@@ -53,7 +58,7 @@
             <a href=" hptts://instagram.com">
                 <img src="images/instagram.svg" alt= "instagram">
             </a>
-        </nav>
+        </div>
     </footer>
 </body>
 </html>
