--- a/wwr/about.html
+++ b/wwr/about.html
@@ -39,11 +39,11 @@
             </section>
             <section class="adventures">
                 <h2>Adventure Awaits You!</h2>
-                <img src="images/image3.jpg" alt="gallary image">
-                <img src="images/image4.jpg" alt="adventure">
-                <img src="images/image5.jpg" alt="happy clients">
-                <img src="images/image6.png" alt="adventure on water">
-                <img src="images/image7.jpg" alt="forest view">
+                <img src="images/image3_600.jpg" alt="gallary image">
+                <img src="images/image4_600.jpg" alt="adventure">
+                <img src="images/image5_600.jpg" alt="happy clients">
+                <img src="images/image6_600.png" alt="adventure on water">
+                <img src="images/image7_600.jpg" alt="forest view">
             </section>
         </main>
     <footer>
