--- a/wwr/about.html
+++ b/wwr/about.html
@@ -34,6 +34,8 @@
             <section clas= "history">
                 <h2>history</h2>
                 <p>White Water Rafting fas a rich history that dates back to the early days of river exploration. our company was founded by the group of passionate rafters who saut tho share the trill of white water rafting with others. since our humble begginings we've grown into premier rafting outfitter.</p>
+                <img src= "images/image1.jpg" alt="happy clients">
+                <p>White Water Rafting fas a rich history that dates back to the early days of river exploration. our company was founded by the group of passionate rafters who saut tho share the trill of white water rafting with others. since our humble begginings we've grown into premier rafting outfitter.</p>
             </section>
             <section class="adventures">
                 <h2>Adventure Awaits You!</h2>
