--- a/wwr/about.html
+++ b/wwr/about.html
@@ -39,11 +39,26 @@
             </section>
             <section class="adventures">
                 <h2>Adventure Awaits You!</h2>
+                <figure>
                 <img src="images/image3_600.jpg" alt="gallary image">
+<figcaption>gallary image</figcaption>
+                </figure>
+                <figure>
                 <img src="images/image4_600.jpg" alt="adventure">
+<figcaption>adventure</figcaption>
+                </figure>
+                <figure>
                 <img src="images/image5_600.jpg" alt="happy clients">
+<figcaption>happy clients</figcaption>
+                </figure>
+                <figure>
                 <img src="images/image6_600.png" alt="adventure on water">
+<figcaption>adventure on the water</figcaption>
+                </figure>
+                <figure>
                 <img src="images/image7_600.jpg" alt="forest view">
+<figcaption></figcaption>
+                </figure>
             </section>
         </main>
     <footer>
