--- a/wwr/about.html
+++ b/wwr/about.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href=https://fonts.googleapis.com>
     <link rel="preconnect" href=https://fonts.gstatic.com crossorigin>
     <link href=https://fonts.googleapis.com/css2?family=Playfair+Display&family=Playwrite+Viet+Nam&display=swap rel="stylesheet">
-    <link rel="stylesheet" herf="styles/rafting.css">
+    <link rel="stylesheet" href="styles/rafting.css">
 </head>
 <body>
     <header>
@@ -27,28 +27,28 @@
             <div class="hero">
                 <h1>About Us</h1>
                 <article>
-                    <img src="images/image2.jpg"  alt="happy client">
+                    <img src="images/image2.png"  alt="happy client">
                     <p>Welcome to White Watter Rafting, you premier destination for thrilling advrntures on the water. Experience the rush of navigating throughrapids and the serenity of floatingthrough calm waters. Join us for an unforgetable journey.</p>
                 </article>
             </div>
             <section clas= "history">
                 <h2>history</h2>
                 <p>White Water Rafting fas a rich history that dates back to the early days of river exploration. our company was founded by the group of passionate rafters who saut tho share the trill of white water rafting with others. since our humble begginings we've grown into premier rafting outfitter.</p>
-                <img src= "images/image1.jpg" alt="happy clients">
+                <img src= "images/image1.png" alt="happy clients">
                 <p>White Water Rafting fas a rich history that dates back to the early days of river exploration. our company was founded by the group of passionate rafters who saut tho share the trill of white water rafting with others. since our humble begginings we've grown into premier rafting outfitter.</p>
             </section>
             <section class="adventures">
                 <h2>Adventure Awaits You!</h2>
                 <figure>
-                <img src="images/image3_600.jpg" alt="gallary image">
+                <img src="images/image3_600.png" alt="gallary image">
 <figcaption>gallary image</figcaption>
                 </figure>
                 <figure>
-                <img src="images/image4_600.jpg" alt="adventure">
+                <img src="images/image4_600.png" alt="adventure">
 <figcaption>adventure</figcaption>
                 </figure>
                 <figure>
-                <img src="images/image5_600.jpg" alt="happy clients">
+                <img src="images/image5_600.png" alt="happy clients">
 <figcaption>happy clients</figcaption>
                 </figure>
                 <figure>
@@ -56,8 +56,8 @@
 <figcaption>adventure on the water</figcaption>
                 </figure>
                 <figure>
-                <img src="images/image7_600.jpg" alt="forest view">
-<figcaption></figcaption>
+                <img src="images/image7_600.png" alt="forest view">
+<figcaption>forest view</figcaption>
                 </figure>
             </section>
         </main>
