--- a/wwr/about.html
+++ b/wwr/about.html
@@ -56,7 +56,7 @@
 <figcaption>adventure on the water</figcaption>
                 </figure>
                 <figure>
-                <img src="images/image7_600.png" alt="forest view">
+                <img src="images/image7_600.jpg" alt="forest view">
 <figcaption>forest view</figcaption>
                 </figure>
             </section>
@@ -65,10 +65,10 @@
         <p>&copy; 2025 | White Water Raftig | Happiness Ncube</p>
         <div class=" social links">
             <a href=" hptts://facebook.com">
-                <img src="images/facebook.svg" alt= "facebook">
+                <img src="images/facebook.png" alt= "facebook">
             </a>
             <a href=" hptts://twitter.com">
-                <img src="images/twitter.svg" alt= "twitter">
+                <img src="images/twitter.png" alt= "twitter">
             </a>
             <a href=" hptts://instagram.com">
                 <img src="images/instagram.svg" alt= "instagram">
