--- a/wwr/about.html
+++ b/wwr/about.html
@@ -71,7 +71,7 @@
                 <img src="images/twitter.png" alt= "twitter">
             </a>
             <a href=" hptts://instagram.com">
-                <img src="images/instagram.svg" alt= "instagram">
+                <img src="images/instagram.png" alt= "instagram">
             </a>
         </div>
     </footer>
