--- a/wwr/about.html
+++ b/wwr/about.html
@@ -40,23 +40,23 @@
             <section class="adventures">
                 <h2>Adventure Awaits You!</h2>
                 <figure>
-                <img src="images/image3_600.png" alt="gallary image">
+                <img src="images/image3.png" alt="gallary image">
 <figcaption>gallary image</figcaption>
                 </figure>
                 <figure>
-                <img src="images/image4_600.png" alt="adventure">
+                <img src="images/image4.png" alt="adventure">
 <figcaption>adventure</figcaption>
                 </figure>
                 <figure>
-                <img src="images/image5_600.png" alt="happy clients">
+                <img src="images/image5.png" alt="happy clients">
 <figcaption>happy clients</figcaption>
                 </figure>
                 <figure>
-                <img src="images/image6_600.png" alt="adventure on water">
+                <img src="images/image6.png" alt="adventure on water">
 <figcaption>adventure on the water</figcaption>
                 </figure>
                 <figure>
-                <img src="images/image7_600.jpg" alt="forest view">
+                <img src="images/image7.jpg" alt="forest view">
 <figcaption>forest view</figcaption>
                 </figure>
             </section>
