--- a/wwr/about.html
+++ b/wwr/about.html
@@ -1,79 +1,74 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Us | White Water Rafting</title>
-    <meta name=" description" content="White water rafting company about us page">
-    <meta name="author" content="Happiness Ncube">
-    <link rel="preconnect" href=https://fonts.googleapis.com>
-    <link rel="preconnect" href=https://fonts.gstatic.com crossorigin>
-    <link href=https://fonts.googleapis.com/css2?family=Playfair+Display&family=Playwrite+Viet+Nam&display=swap rel="stylesheet">
-    <link rel="stylesheet" href="styles/rafting.css">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>About Us | White Water Rafting</title>
+<meta name="description" content="White water rafting company about us page">
+<meta name="author" content="Happiness Ncube">
+<link rel="preconnect" href="(link unavailable)">
+<link rel="preconnect" href="(link unavailable)" crossorigin>
+<link href="(link unavailable)" rel="stylesheet">
+<link rel="stylesheet" href="styles/rafting.css">
 </head>
 <body>
-    <header>
-        <img src="images/logo.png" alt="Company Logo">    
-        <nav>
-            <ul>
-                <a href="index.html">Home</a>
-                <a href="about.html">About Us</a>
-                <a href="trips.html">trips </a>
-                <a href="contacts.html">Contact</a>
-            </ul>
-        </nav>
-    </header>
-        <main>
-            <div class="hero">
-                <h1>About Us</h1>
-                <article>
-                    <img src="images/image2.png"  alt="happy client">
-                    <p>Welcome to White Watter Rafting, you premier destination for thrilling advrntures on the water. Experience the rush of navigating throughrapids and the serenity of floatingthrough calm waters. Join us for an unforgetable journey.</p>
-                </article>
-            </div>
-            <section clas= "history">
-                <h2>history</h2>
-                <p>White Water Rafting has a rich history that dates back to the early days of river exploration. our company was founded by the group of passionate rafters who saut tho share the trill of white water rafting with others. since our humble begginings we've grown into premier rafting outfitter.</p>
-                <img src= "images/image1.png" alt="happy clients">
-                <p>White Water Rafting has a rich history that dates back to the early days of river exploration. our company was founded by the group of passionate rafters who saut tho share the trill of white water rafting with others. since our humble begginings we've grown into premier rafting outfitter.</p>
-            </section>
-            <section class="adventures">
-                <h2>Adventure Awaits You!</h2>
-                <figure>
-                <img src="images/image3.png" alt="gallary image">
-<figcaption>gallary image</figcaption>
-                </figure>
-                <figure>
-                <img src="images/image4.png" alt="adventure">
-<figcaption>adventure</figcaption>
-                </figure>
-                <figure>
-                <img src="images/image5.png" alt="happy clients">
-<figcaption>happy clients</figcaption>
-                </figure>
-                <figure>
-                <img src="images/image6.png" alt="adventure on water">
-<figcaption>adventure on the water</figcaption>
-                </figure>
-                <figure>
-                <img src="images/image7.jpg" alt="forest view">
-<figcaption>forest view</figcaption>
-                </figure>
-            </section>
-        </main>
-    <footer>
-        <p>&copy; 2025 | White Water Raftig | Happiness Ncube</p>
-        <div class=" social links">
-            <a href=" hptts://facebook.com">
-                <img src="images/facebook.png" alt= "facebook">
-            </a>
-            <a href=" hptts://twitter.com">
-                <img src="images/twitter.png" alt= "twitter">
-            </a>
-            <a href=" hptts://whatsapp.com">
-                <img src="images/whatsapp.png" alt= "instagram">
-            </a>
-        </div>
-    </footer>
+<header>
+<img src="images/logo.png" alt="Company Logo">
+<nav>
+<ul>
+<li><a href="index.html">Home</a></li>
+<li><a href="about.html">About Us</a></li>
+<li><a href="trips.html">Trips</a></li>
+<li><a href="contacts.html">Contact</a></li>
+</ul>
+</nav>
+</header>
+<main>
+<div class="hero">
+<h1>About Us</h1>
+<article>
+<h2>Our Story</h2>
+<img src="images/image2.png" alt="Happy Client">
+<p>Welcome to White Water Rafting, your premier destination for thrilling adventures on the water. Experience the rush of navigating through rapids and the serenity of floating through calm waters. Join us for an unforgettable journey.</p>
+</article>
+</div>
+<section class="history">
+<h2>Our History</h2>
+<p>White Water Rafting has a rich history that dates back to the early days of river exploration. Our company was founded by a group of passionate rafters who sought to share the thrill of white water rafting with others. Since our humble beginnings, we've grown into a premier rafting outfitter.</p>
+<img src="images/image1.png" alt="Happy Clients">
+<p>Today, we continue to provide exceptional rafting experiences for adventurers of all skill levels. Our expert guides, state-of-the-art equipment, and commitment to safety ensure that every trip is an unforgettable success.</p>
+</section>
+<section class="adventures">
+<h2>Adventure Awaits You!</h2>
+<figure>
+<img src="images/image3.png" alt="Gallery Image">
+<figcaption>Gallery Image</figcaption>
+</figure>
+<figure>
+<img src="images/image4.png" alt="Adventure">
+<figcaption>Adventure</figcaption>
+</figure>
+<figure>
+<img src="images/image5.png" alt="Happy Clients">
+<figcaption>Happy Clients</figcaption>
+</figure>
+<figure>
+<img src="images/image6.png" alt="Adventure on Water">
+<figcaption>Adventure on the Water</figcaption>
+</figure>
+<figure>
+<img src="images/image7.jpg" alt="Forest View">
+<figcaption>Forest View</figcaption>
+</figure>
+</section>
+</main>
+<footer>
+<p>&copy; 2025 | White Water Rafting | Happiness Ncube</p>
+<div class="social-links">
+<a href="https://facebook.com"><img src="images/facebook.png" alt="Facebook"></a>
+<a href="(link unavailable)"><img src="images/twitter.png" alt="Twitter"></a>
+<a href="(link unavailable)"><img src="images/whatsapp.png" alt="WhatsApp"></a>
+</div>
+</footer>
 </body>
 </html>
