--- a/wwr/about.html
+++ b/wwr/about.html
@@ -6,10 +6,10 @@
 <title>About Us | White Water Rafting</title>
 <meta name="description" content="White water rafting company about us page">
 <meta name="author" content="Happiness Ncube">
-<link rel="preconnect" href="(link unavailable)">
-<link rel="preconnect" href="(link unavailable)" crossorigin>
-<link href="(link unavailable)" rel="stylesheet">
-<link rel="stylesheet" href="styles/rafting.css">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Playwrite+Viet+Nam&display=swap" rel="stylesheet">
+<link rel="stylesheets" href="styles"/"rafting.css">
 </head>
 <body>
 <header>
@@ -66,8 +66,8 @@
 <p>&copy; 2025 | White Water Rafting | Happiness Ncube</p>
 <div class="social-links">
 <a href="https://facebook.com"><img src="images/facebook.png" alt="Facebook"></a>
-<a href="(link unavailable)"><img src="images/twitter.png" alt="Twitter"></a>
-<a href="(link unavailable)"><img src="images/whatsapp.png" alt="WhatsApp"></a>
+<a href="https://twitter.com"><img src="images/twitter.png" alt="Twitter"></a>
+<a href="https://whatsapp.com"><img src="images/whatsapp.png" alt="WhatsApp"></a>
 </div>
 </footer>
 </body>
