--- a/wwr/about.html
+++ b/wwr/about.html
@@ -9,7 +9,7 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Playwrite+Viet+Nam&display=swap" rel="stylesheet">
-<link rel="stylesheets" href="styles"/"rafting.css">
+<link rel="stylesheet" href="styles/rafting.css">
 </head>
 <body>
 <header>
