--- a/wwr/contacts.html
+++ b/wwr/contacts.html
@@ -20,6 +20,10 @@
         </nav>
     </header>
     <main class="grid-container">
+        <section class="grid-item grid-item--2 hero-section">
+            <h2>Experience the Thrill</h2>
+            <p>Get ready for an unforgettable adventure!</p>
+        </section>
         <section class="grid-item grid-item--1">
             <h1>Contact Us</h1>
             <p>Get in touch with us for more information about our services.</p>
