--- a/wwr/contacts.html
+++ b/wwr/contacts.html
@@ -1,91 +1,106 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact Us | White Water Rafting</title>
-    <meta name="description" content="Contact White Water Rafting for more information about our services.">
-    <link rel="stylesheet" href="styles/rafting.css">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Contact Us | White Water Rafting</title>
+<meta name="description" content="Contact White Water Rafting for more information about our services.">
+<link rel="stylesheet" href="styles/rafting.css">
 </head>
 <body>
-    <header>
-        <img src="images/logo.png" alt="White Water Rafting Logo">
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About Us</a></li>
-                <li><a href="contact.html">Contact Us</a></li>
-                <li><a href="trips.html">Trips</a></li>
-            </ul>
-        </nav>
-    </header>
-    <main class="grid-container">
-        <section class="grid-item grid-item--2 hero-section">
-            <h2>Experience the Thrill</h2>
-            <p>Get ready for an unforgettable adventure!</p>
-        </section>
-        <section class="grid-item grid-item--1">
-            <h1>Contact Us</h1>
-            <p>Get in touch with us for more information about our services.</p>
-        </section>
-        <section class="grid-item grid-item--2">
-            <h2>Company Information</h2>
-            <p>Address: 123 Main St, Anytown, USA</p>
-            <p>Phone: 555-555-5555</p>
-            <p>Email: <a href="mailto:info@whitewater-rafting.com">info@whitewater-rafting.com</a></p>
-            <p>Contact Person: John Doe - <a href="mailto:johndoe@whitewater-rafting.com">johndoe@whitewater-rafting.com</a></p>
-            <iframe src="https://www.google.com/maps/embed?..." frameborder="0" style="border:0" allowfullscreen></iframe>
-        </section>
-        <section class="grid-item grid-item--3">
-            <h2>Meet Our Team</h2>
-            <ul>
-                <li>
-                    <img src="images/johndoe.jpg" alt="John Doe">
-                    <p>John Doe - Guide</p>
-                    <p>Email: <a href="mailto:johndoe@whitewater-rafting.com">johndoe@whitewater-rafting.com</a></p>
-                </li>
-                <li>
-                    <img src="images/janesmith.jpg" alt="Jane Smith">
-                    <p>Jane Smith - Manager</p>
-                    <p>Email: <a href="mailto:janesmith@whitewater-rafting.com">janesmith@whitewater-rafting.com</a></p>
-                </li>
-                <li>
-                    <img src="images/bobjohnson.jpg" alt="Bob Johnson">
-                    <p>Bob Johnson - Instructor</p>
-                    <p>Email: <a href="mailto:bobjohnson@whitewater-rafting.com">bobjohnson@whitewater-rafting.com</a></p>
-                </li>
-            </ul>
-        </section>
-        <section class="grid-item grid-item--4">
-            <h2>Get in Touch</h2>
-            <form>
-                <label for="name">Name:</label>
-                <input type="text" id="name" name="name"><br><br>
-                <label for="email">Email:</label>
-                <input type="email" id="email" name="email"><br><br>
-                <label for="purpose">Purpose:</label>
-                <input type="radio" id="general" name="purpose" value="General Inquiry">
-                <label for="general">General Inquiry</label>
-                <input type="radio" id="reservation" name="purpose" value="Reservation Question">
-                <label for="reservation">Reservation Question</label>
-                <input type="radio" id="suggestion" name="purpose" value="Website Suggestion">
-                <label for="suggestion">Website Suggestion</label><br><br>
-                <label for="message">Message:</label>
-                <textarea id="message" name="message"></textarea><br><br>
-                <input type="checkbox" id="newsletter" name="newsletter" value="Subscribe to Newsletter">
-                <label for="newsletter">Subscribe to Newsletter</label><br><br>
-                <input type="submit" value="Submit">
-            </form>
-        </section>
-    </main>
-    <footer>
-        <p>&copy; 2023 White Water Rafting</p>
-        <ul>
-            <li><a href="https://www.facebook.com"><img src="images/facebook.png" alt="Facebook"></a></li>
-            <li><a href="https://www.twitter.com"><img src="images/twitter.png" alt="Twitter"></a></li>
-            <li><a href="https://www.whatsapp.com"><img src="images/whatsapp.png" alt="WhatsApp"></a></li>
-        </ul>
-        <p><a href="wireframe.png">View Wireframe</a></p>
-    </footer>
+<div class="container">
+<div class="Header">
+<div class="Logo">
+<img src="images/logo.png" alt="White Water Rafting Logo">
+</div>
+<div class="Nav">
+<nav>
+<ul>
+<li><a href="index.html">Home</a></li>
+<li><a href="about.html">About Us</a></li>
+<li><a href="contact.html">Contact Us</a></li>
+<li><a href="trips.html">Trips</a></li>
+</ul>
+</nav>
+</div>
+</div>
+<div class="Hero">
+<div class="image">
+<!-- Hero image -->
+</div>
+<div class="Title">
+<h2>Experience the Thrill</h2>
+</div>
+<div class="Description">
+<p>Get ready for an unforgettable adventure!</p>
+</div>
+</div>
+<div class="Main">
+<div class="Employee image1">
+<img src="images/pinkmooler.jpg" alt="Pink Mooler>
+</div>
+<div class="Employee description 1">
+<h2>Pink Mooler</h2>
+<p>Guide</p>
+<p>Email: <a href="mailto:pinkmooler@whitewater-rafting.com">pinkmooler@whitewater-rafting.com</a></p>
+</div>
+<div class="Employee image2">
+<img src="images/raymondray.jpg" alt="Raymond Ray">
+</div>
+<div class="Employee description2">
+<h2>Raymond Ray</h2>
+<p>Manager</p>
+<p>Email: <a href="mailto:raymondray@whitewater-rafting.com">raymondray@whitewater-rafting.com</a></p>
+</div>
+<div class="Employee image3">
+<img src="images/zamancube.jpg" alt="Zama Ncube">
+</div>
+<div class="Employee description3">
+<h2>Zama Ncube</h2>
+<p>Instructor</p>
+<p>Email: <a href="mailto:zamancube@whitewater-rafting.com">zamancube@whitewater-rafting.com</a></p>
+</div>
+<div class="Map">
+<iframe src="(link unavailable)?..." frameborder="0" style="border:0" allowfullscreen></iframe>
+</div>
+<div class="Contact">
+<h2>Get in Touch</h2>
+<form>
+<label for="name">Name:</label>
+<input type="text" id="name" name="name">
+
+
+<label for="email">Email:</label>
+<input type="email" id="email" name="email">
+
+
+<label for="phone">Phone:</label>
+<input type="tel" id="phone" name="phone">
+
+
+<label for="message">Message:</label>
+<textarea id="message" name="message"></textarea>
+
+
+<input type="submit" value="Submit"
+</form>
+</div>
+</div>
+<div class="Footer">
+<div class="Social links">
+<ul>
+<li><a href="(link unavailable)"><img src="images/facebook.png" alt="Facebook"></a></li>
+<li><a href="(link unavailable)"><img src="images/twitter.png" alt="Twitter"></a></li>
+<li><a href="(link unavailable)"><img src="images/whatsapp.png" alt="WhatsApp"></a></li>
+</ul>
+</div>
+<div class="Wireframe link">
+<p><a href="wireframe.png">View Wireframe</a></p>
+</div>
+<div class="Copyright">
+<p>&copy; 2023 White Water Rafting</p>
+</div>
+</div>
+</div>
 </body>
 </html>
