--- a/wwr/contacts.html
+++ b/wwr/contacts.html
@@ -61,7 +61,7 @@
 <p>Email: <a href="mailto:zamancube@whitewater-rafting.com">zamancube@whitewater-rafting.com</a></p>
 </div>
 <div class="Map">
-<iframe src="(link unavailable)?..." frameborder="0" style="border:0" allowfullscreen></iframe>
+<iframe src="https://www.google.com/maps/embed?..." frameborder="0" style="border:0" allowfullscreen></iframe>
 </div>
 <div class="Contact">
 <h2>Get in Touch</h2>
@@ -89,9 +89,9 @@
 <div class="Footer">
 <div class="Social links">
 <ul>
-<li><a href="(link unavailable)"><img src="images/facebook.png" alt="Facebook"></a></li>
-<li><a href="(link unavailable)"><img src="images/twitter.png" alt="Twitter"></a></li>
-<li><a href="(link unavailable)"><img src="images/whatsapp.png" alt="WhatsApp"></a></li>
+<li><a href="https://www.facebook.com"><img src="images/facebook.png" alt="Facebook"></a></li>
+<li><a href="https://www.twitter.com"><img src="images/twitter.png" alt="Twitter"></a></li>
+<li><a href="https://www.whatsapp.com"><img src="images/whatsapp.png" alt="WhatsApp"></a></li>
 </ul>
 </div>
 <div class="Wireframe link">
