--- a/wwr/contacts.html
+++ b/wwr/contacts.html
@@ -95,7 +95,7 @@
 </ul>
 </div>
 <div class="Wireframe link">
-<p><a href="wireframe.png">View Wireframe</a></p>
+<p><a href="https://app.moqups.com/zas3SBWG4AjvVTOXv23FFExPGafWNPbn/edit/page/ad64222d5>View Wireframe</a></p>
 </div>
 <div class="Copyright">
 <p>&copy; 2023 White Water Rafting</p>
